<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Main_page_color"
    tools:context=".ui.annonces.AnnoncesFragment">


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="372dp"
        android:src="@drawable/page_connexion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.644"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="460dp"
        android:layout_height="243dp"
        android:layout_marginBottom="492dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/oldktab_transport_full"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_inscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="468dp"
        android:backgroundTint="@color/white"
        android:text="@string/inscription"
        android:textColor="#000000"
        android:textIsSelectable="true"
        android:textSize="20dp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_connexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="468dp"
        android:backgroundTint="@color/white"
        android:text="@string/connexion"
        android:textColor="#000000"
        android:textIsSelectable="true"
        android:textSize="20dp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip5"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginStart="260dp"
        android:backgroundTint="@color/Orange_color"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="258dp" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="346dp"
        android:layout_height="48dp"
        android:layout_marginBottom="268dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="Prénom"
        android:inputType="textPassword"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="346dp"
        android:layout_height="48dp"
        android:layout_marginBottom="208dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="Adresse e-mail"
        android:inputType="textPassword"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="346dp"
        android:layout_height="48dp"
        android:layout_marginBottom="148dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="Mot de passe"
        android:inputType="textPassword"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword4"
        android:layout_width="346dp"
        android:layout_height="48dp"
        android:layout_marginBottom="92dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="Confirmer votre mot de passe"
        android:inputType="textPassword"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="346dp"
        android:layout_height="48dp"
        android:layout_marginBottom="328dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="Nom"
        android:inputType="textEmailAddress"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_se_connecter"
        android:layout_width="171dp"
        android:layout_height="45dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/Orange_color"
        android:text="@string/s_inscrire"
        android:textColor="@color/white"
        android:textIsSelectable="true"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Déja membre?"
        tools:layout_editor_absoluteX="233dp"
        tools:layout_editor_absoluteY="645dp" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Connexion"
        android:textColor="@color/Orange_color"
        android:textColorHint="#D51111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="378dp"
        android:layout_height="55dp"
        android:layout_marginBottom="392dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="S'inscrire"
        android:textColor="@color/Orange_color"
        android:textColorHint="#D51111"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="53dp" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/Facebook"
        tools:layout_editor_absoluteX="365dp"
        tools:layout_editor_absoluteY="291dp" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="42dp"
        android:layout_height="46dp"
        android:src="@drawable/GoogleIcon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42"
        tools:layout_editor_absoluteX="269dp" />


</androidx.constraintlayout.widget.ConstraintLayout>